# Minecraft-B1.7.3-CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  PLUGIN_API.md  README.md
examples/plugins/hello_world/: CMakeLists.txt  exports.map  hello_world_plugin.cpp
scripts/: build_unix.sh  build_windows.bat  build_windows.ps1
src/: main.cpp
src/admin/: CMakeLists.txt  admin_manager.cpp  admin_manager.hpp
src/core/: CMakeLists.txt
src/core/config/: server_config.cpp  server_config.hpp
src/core/rng/: random.cpp  random.hpp
src/core/scheduler/: job_system.cpp  job_system.hpp
src/core/tick/: tick_manager.cpp  tick_manager.hpp
src/entity/: CMakeLists.txt  entity.hpp  entity_id_manager.hpp  entity_manager.cpp  entity_manager.hpp  player.cpp  player.hpp
src/entity/crafting/: crafting_recipe.cpp  crafting_recipe.hpp
src/entity/inventory/: inventory.cpp  inventory.hpp  item_stack.cpp  item_stack.hpp
src/entity/item/: item_entity.hpp  item_entity_manager.cpp  item_entity_manager.hpp
src/entity/mob/: hostile_mob.cpp  hostile_mob.hpp  mob.cpp  mob.hpp  mob_ai.hpp  mob_manager.cpp  mob_manager.hpp  mob_metadata.cpp  mob_metadata.hpp  mob_spawner.cpp  mob_spawner.hpp  mob_type.hpp  passive_mob.cpp  passive_mob.hpp  pathfinding.cpp  pathfinding.hpp
src/net/: CMakeLists.txt
src/net/protocol/: packet.cpp  packet.hpp  packet_handler.cpp  packet_handler.hpp
src/net/protocol/packets/: animation.hpp  block_change.cpp  block_change.hpp  block_dig.cpp  block_dig.hpp  block_item_switch.cpp  block_item_switch.hpp  chat.cpp  chat.hpp  close_window.hpp  collect.hpp  destroy_entity.cpp  destroy_entity.hpp  entity_action.hpp  entity_look.cpp  entity_look.hpp  entity_look_move.cpp  entity_look_move.hpp  entity_relative_move.cpp  entity_relative_move.hpp  entity_status.cpp  entity_status.hpp  handshake.cpp  handshake.hpp  keepalive.cpp  keepalive.hpp  kick.cpp  kick.hpp  login.cpp  login.hpp  map_chunk.cpp  map_chunk.hpp  mob_spawn.cpp  mob_spawn.hpp  named_entity_spawn.cpp  named_entity_spawn.hpp  pickup_spawn.hpp  place.cpp  place.hpp  player_flying.cpp  (+23 more)
src/net/session/: client_session.cpp  client_session.hpp
src/net/transport/: chunk_streaming_manager.cpp  chunk_streaming_manager.hpp  network_manager.cpp  network_manager.hpp
src/platform/: CMakeLists.txt
src/platform/fs/: file.cpp  file.hpp  path.cpp  path.hpp
src/platform/net/: socket.cpp  socket.hpp  tcp_listener.cpp  tcp_listener.hpp
src/platform/thread/: mutex.cpp  mutex.hpp  thread.cpp  thread.hpp
src/platform/time/: clock.cpp  clock.hpp
src/plugin/: CMakeLists.txt  plugin.hpp
src/plugin/event/: block_events.hpp  entity_events.hpp  event.hpp  event_manager.cpp  event_manager.hpp  player_events.hpp  server_events.hpp
src/plugin/loader/: plugin_loader.cpp  plugin_loader.hpp
src/plugin/security/: plugin_permission.hpp
src/storage/: CMakeLists.txt
src/storage/async/: async_io.cpp  async_io.hpp
src/storage/chunk/: chunk_serializer.cpp  chunk_serializer.hpp  chunk_storage.cpp  chunk_storage.hpp
src/storage/nbt/: nbt.cpp  nbt.hpp  nbt_io.cpp  nbt_io.hpp
src/storage/player/: player_data_manager.cpp  player_data_manager.hpp
src/storage/region/: region_file.cpp  region_file.hpp
src/util/: CMakeLists.txt  result.hpp  span_util.hpp  types.hpp  uuid.cpp  uuid.hpp
src/util/allocator/: arena.cpp  arena.hpp  pool.cpp  pool.hpp
src/world/: CMakeLists.txt
src/world/block/: block_manager.cpp  block_manager.hpp
src/world/chunk/: chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp
src/world/generation/: noise.cpp  noise.hpp  world_generator.cpp  world_generator.hpp
src/world/lighting/: light_manager.hpp  lighting_engine.cpp  lighting_engine.hpp
src/world/region/: region.cpp  region.hpp
tests/: CMakeLists.txt
tests/unit/: test_arena.cpp  test_main.cpp  test_packet.cpp  test_random.cpp
